# ticktick-mcp

./: .dockerignore  .env.example  .gitignore  .woodpecker.yml  CLIENT_METHODS.md  DESIGN.md  Dockerfile  LICENSE  NOTICE  README.md  TOOLS.md  compose.yaml  pyproject.toml
docs/: README.md  slice-0-scaffold-and-design.md  slice-1-client-auth-transport.md  slice-2-client-methods.md  slice-3-mcp-tool-layer.md  slice-4-docker-readme.md
docs/superpowers/plans/: 2026-06-12-pluggable-caller-auth.md  2026-06-13-columns-assignee.md
docs/superpowers/specs/: 2026-06-12-pluggable-caller-auth-design.md  2026-06-13-columns-assignee-design.md
tests/: test_auth.py  test_client_auth.py  test_client_live.py  test_client_methods.py  test_config.py  test_dates.py  test_server.py
ticktick_mcp/: __init__.py  config.py
ticktick_mcp/client/: __init__.py  __main__.py  client.py  dates.py  errors.py  models.py  session.py  transport.py
ticktick_mcp/server/: __init__.py  app.py  auth.py  handlers.py
