[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ticktick-mcp"
version = "0.1.2"
description = "Unofficial MCP server for TickTick, built on the reverse-engineered v2 web API."
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [{ name = "Ethan J Lewis" }]
keywords = ["ticktick", "mcp", "model-context-protocol", "todo", "tasks"]
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Intended Audience :: Developers",
    "Topic :: Office/Business :: Scheduling",
]
dependencies = [
    "fastmcp>=2.0",
    "httpx>=0.27",
    "pydantic>=2.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]

[project.urls]
Homepage = "https://half.st/ejlewis/ticktick-mcp"
Source = "https://half.st/ejlewis/ticktick-mcp"

[project.scripts]
ticktick-mcp = "ticktick_mcp.server:main"

[tool.hatch.build.targets.wheel]
packages = ["ticktick_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
